# fhir-research

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  __main__.py  mkdocs.yml  pyproject.toml  test1_errors.txt  test1_output.md  test1_yaml_errors.txt  test1_yaml_output.md  test2_errors.txt  test2_output.md  test2_yaml_errors.txt  test2_yaml_output.md  test3_errors.txt  test3_output.md  test3_yaml_errors.txt  test3_yaml_output.md  test4_errors.txt  test4_output.md  test4_yaml_errors.txt  test4_yaml_output.md  test5_errors.txt  test5_output.md  test5_yaml_errors.txt  test5_yaml_output.md  uv-requirements.txt
.github/workflows/: python-app.yml
docs/: examples.md  fhir-profiles.md
notebooks/: hdl_visualization.ipynb  hdl_visualization.md  hdl_visualize.py  lab_visualize.py
scripts/: generate_example_data.py  generate_fhir_example.py  https_serve.py  web-research.py
src/fhir_research/: __init__.py  examples.py  utils.py
src/fihr_research.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/medical_data_science/: fhir_utils.py
tests/: test_examples.py  test_marimo_export.py  test_utils.py
