[build-system]
# make version from git
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# disable automatic module finding
py-modules = ["__main__"]

[tool.setuptools_scm]
# empty

[tool.pyright]
venvPath = "."
venv = ".venv"

[project]
name = "mds"
version = "0.1.0"
description = "A project for FHIR data handling, analysis, and visualization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fhir.resources>=6.4.0",
    "pandas",
    "bokeh",
    "pillow",
    "matplotlib",
    "marimo",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pyflakes"
]
